--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="._assets/output-css/style.css">
+  <link rel="stylesheet" href="../_assets/output-css/style.css">
   <link
   href="https://fonts.google.com/specimen/Electrolize?category=Serif,Sans+Serif,Display,Monospace"
   rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="script.js"></script>
+  <script src="../_assets/js/script.js"></script>
 
   <style>
     a {
@@ -27,9 +27,9 @@
     <div class="navbar">
       <div class="navbar-content container">
     <ul class="navbar-logo">
-      <li> <a href="https://www.linkedin.com/in/christian-medders-6a00b7a5/"  target="_blank"> <img class="navbar-logo-item" src="./_assets/images/linkedin.png"></a></li>
+      <li> <a href="https://www.linkedin.com/in/christian-medders-6a00b7a5/"  target="_blank"> <img class="navbar-logo-item" src="../_assets/images/linkedin.png"></a></li>
       <li>
-        <a href="https://github.com/clmedders" target="_blank"> <img class="navbar-logo-item" src="./_assets/images/cat-2.png"></a>
+        <a href="https://github.com/clmedders" target="_blank"> <img class="navbar-logo-item" src="../_assets/images/cat-2.png"></a>
       </li>
     </ul>
   <div id="hamburger-menu" class="fa fa-bars hamburger-menu">Menu</div> 
@@ -54,7 +54,7 @@
             <button class="hero-button"><a href="https://linktr.ee/christianmedders"  target="_blank">Let's Connect</a></button>
         </div>
         <div class="hero-pic">
-          <img  src="./_assets/images/me.jpg">
+          <img  src="../_assets/images/me.jpg">
         </div>
           </div>
     </section>
@@ -77,7 +77,7 @@
           <h1>Development Work</h1>
           <div class="dev-work-inner">
             <div class="dev-card">
-              <div class="dev-card-image"> <img src="./_assets/images/mia-card-2.png"></div>
+              <div class="dev-card-image"> <img src="../_assets/images/mia-card-2.png"></div>
               <div class="dev-card-text">
                 <h2>Made In America</h2>
                 <p>An initiative to help promote more American made goods. Click <a style="text-decoration: underline;" href="mia.html" target="_blank"> 
@@ -85,7 +85,7 @@
               </div>
             </div>
             <div class="dev-card">
-              <div class="dev-card-image"> <img src="./_assets/images/vote-card.png"></div>
+              <div class="dev-card-image"> <img src="../_assets/images/vote-card.png"></div>
               <div class="dev-card-text">
                 <h2>Vote.gov</h2>
                 <p>Your one stop shop for election information. Click <a style="text-decoration: underline;" href="vote.html" target="_blank"> 
@@ -93,7 +93,7 @@
               </div>
             </div>
             <div class="dev-card">
-              <div class="dev-card-image"> <img src="./_assets/images/ys park.jpeg"></div>
+              <div class="dev-card-image"> <img src="../_assets/images/ys park.jpeg"></div>
               <div class="dev-card-text">
                 <h2>National Parks</h2>
                 <p>My first landing page. Click <a style="text-decoration: underline;" href="natpark.html" target="_blank"> 
@@ -101,7 +101,7 @@
               </div>
             </div>
             <div class="dev-card">
-              <div class="dev-card-image"> <img src="./_assets/images/coffee.png"></div>
+              <div class="dev-card-image"> <img src="../_assets/images/coffee.png"></div>
               <div class="dev-card-text">
                 <h2>Aiken Coffeehouse and Lounge</h2>
                 <p>My brain child and dream business. Click <a style="text-decoration: underline;" href="aiken.html" target="_blank"> 
@@ -115,14 +115,14 @@
           <h1>Personal Work</h1>
           <div class="personal-work-inner">
             <div class="personal-card">
-              <div class="personal-card-image"> <img src="./_assets/images/boston.png"></div>
+              <div class="personal-card-image"> <img src="../_assets/images/boston.png"></div>
               <div class="personal-card-text">
                 <h2>Boston</h2>
                   <p>Watch me get engaged on my trip to Boston. Click <a style="text-decoration: underline;" href="https://www.youtube.com/watch?v=Q_QmepSYqng"  target="_blank">here</a> to watch.</p>
               </div>
             </div>
             <div class="personal-card">
-              <div class="personal-card-image"> <img src="./_assets/images/disney.png"></div>
+              <div class="personal-card-image"> <img src="../_assets/images/disney.png"></div>
               <div class="personal-card-text">
                 <h2>Disney and Universal</h2>
                 <p>Check out my trip to Disney and Harry Potter World. Click <a style="text-decoration: underline;" href="https://www.youtube.com/watch?v=mnGA00I5H1o"  target="_blank">here</a> to watch.</p></p>
@@ -136,19 +136,19 @@
       <p>Here are some cool articles and tools that I have found to be helpful and I think they could be good for you as well.</p>
       <div class="cool-stuff-inner container">
       <div class="cool-stuff-card">
-        <div class="cool-stuff-image"> <img  src="./_assets/images/pineapple.png"> </div>
+        <div class="cool-stuff-image"> <img  src="../_assets/images/pineapple.png"> </div>
             <div class="cool-stuff-text"> <a style="text-decoration: underline;" href="https://kentcdodds.com/blog/write-tests" target="_blank"> 
               <p>Write tests. Not too many. Mostly integration.</p>
               </a> </div>
         </div>
         <div class="cool-stuff-card">
-          <div class="cool-stuff-image"> <img  src="./_assets/images/odin.png"> </div>
+          <div class="cool-stuff-image"> <img  src="../_assets/images/odin.png"> </div>
           <div class="cool-stuff-text">  <a style="text-decoration: underline;" href="https://www.theodinproject.com/about" target="_blank"> 
             <p>The Odin Project</p>
             </a> </div>
         </div>
         <div class="cool-stuff-card">
-          <div class="cool-stuff-image"> <img src="./_assets/images/cypress.png"> </div>
+          <div class="cool-stuff-image"> <img src="../_assets/images/cypress.png"> </div>
           <div class="cool-stuff-text">  <a style="text-decoration: underline;" href="https://www.cypress.io/" target="_blank"> 
             <p>JavaScript End to End Tesing Tool.</p>
             </a> </div>
