75% of migreation done

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,165 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../_assets/output-css/style.css">
-  <link
-  href="https://fonts.google.com/specimen/Electrolize?category=Serif,Sans+Serif,Display,Monospace"
-  rel="stylesheet"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="../_assets/js/script.js"></script>
+---
+layout: base
+---
 
-  <style>
-    a {
-      text-decoration: none;
-    }
-
-    a {
-      color: inherit;
-    }
-  </style>
-  <title>Personal Site</title>
-</head>
-<body>
-  <nav>
-    <div class="navbar">
-      <div class="navbar-content container">
-    <ul class="navbar-logo">
-      <li> <a href="https://www.linkedin.com/in/christian-medders-6a00b7a5/"  target="_blank"> <img class="navbar-logo-item" src="../_assets/images/linkedin.png"></a></li>
-      <li>
-        <a href="https://github.com/clmedders" target="_blank"> <img class="navbar-logo-item" src="../_assets/images/cat-2.png"></a>
-      </li>
-    </ul>
-  <div id="hamburger-menu" class="fa fa-bars hamburger-menu">Menu</div> 
-  <div id="site-menu" class="navbar-menu">
-        <div class="navbar-list">
-          <ul>
-            <li class="navbar-item"><a href="#who-i-am" target="_top">Who I Am</a></li>
-            <li class="navbar-item"><a href="#my-work" target="_top">My Work</a></li>
-            <li class="navbar-item"><a href="#cool-stuff" target="_top">Some Cool Stuff</a></li>
-        </ul>
-        </div>
-        </div>
-      </div>
-    </div>
-  </nav>
-  <main>
-    <section class="hero">
-      <div class="hero-inner container">
-        <div class="hero-text">
-            <h1>Christian Medders</h1>
-            <p>Hey there, thanks so much for coming. This site was made to showcase some projects I have worked on and contributed to. Also to let you get to know me a little more... Enjoy!</p>
-            <button class="hero-button"><a href="https://linktr.ee/christianmedders"  target="_blank">Let's Connect</a></button>
-        </div>
-        <div class="hero-pic">
-          <img  src="../_assets/images/me.jpg">
-        </div>
-          </div>
-    </section>
-    <section id="who-i-am" class="who-i-am">
-      <div class="who-i-am-content container">
-        <h1>
-          What Wakes Me Up In The Morning
-        </h1>
-        <p class="p-tag">
-          I am an outdoor-loving, golf club swinging, beer-drinking (and sometimes brewing) guy who likes to do some coding. Most of my career was spent in Higher Education working in student affairs, then one day I felt like it was time for a change. Luckily, I had some awesome people to help support me in my transition. My older brother told me I could become a good developer and I believed him. Now I am with a great company that took a chance on me and has allowed me to grow my skills. I work on the Testing and QA side of the development with the goal to become a badass developer.
-          <br>
-          <br>
-          However, I am much more than that... I am also a son, brother, friend, husband, and a dad. Born and raised in Aiken, SC I met the love of my life in college and have grown an awesome life. We have one child and with all the craziness that will bring, I really can't imagine it being any other way. I am so grateful that you are here and hope that when you leave you to have a better idea of who I am, what I can do, and maybe have a desire to connect.  
-        </p>
-      </div>
-    </section>
-    <section id="my-work" class="my-work">
-      <div class="work_inner container">
-        <div class="dev-work">
-          <h1>Development Work</h1>
-          <div class="dev-work-inner">
-            <div class="dev-card">
-              <div class="dev-card-image"> <img src="../_assets/images/mia-card-2.png"></div>
-              <div class="dev-card-text">
-                <h2>Made In America</h2>
-                <p>An initiative to help promote more American made goods. Click <a style="text-decoration: underline;" href="mia.html" target="_blank"> 
-                  here </a>to read more.</p>
-              </div>
-            </div>
-            <div class="dev-card">
-              <div class="dev-card-image"> <img src="../_assets/images/vote-card.png"></div>
-              <div class="dev-card-text">
-                <h2>Vote.gov</h2>
-                <p>Your one stop shop for election information. Click <a style="text-decoration: underline;" href="vote.html" target="_blank"> 
-                  here </a>to read more.</p>
-              </div>
-            </div>
-            <div class="dev-card">
-              <div class="dev-card-image"> <img src="../_assets/images/ys park.jpeg"></div>
-              <div class="dev-card-text">
-                <h2>National Parks</h2>
-                <p>My first landing page. Click <a style="text-decoration: underline;" href="natpark.html" target="_blank"> 
-                  here </a>to read more.</p>
-              </div>
-            </div>
-            <div class="dev-card">
-              <div class="dev-card-image"> <img src="../_assets/images/coffee.png"></div>
-              <div class="dev-card-text">
-                <h2>Aiken Coffeehouse and Lounge</h2>
-                <p>My brain child and dream business. Click <a style="text-decoration: underline;" href="aiken.html" target="_blank"> 
-                  here </a>to read more.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        </div>
-        <div class="personal-work">
-          <h1>Personal Work</h1>
-          <div class="personal-work-inner">
-            <div class="personal-card">
-              <div class="personal-card-image"> <img src="../_assets/images/boston.png"></div>
-              <div class="personal-card-text">
-                <h2>Boston</h2>
-                  <p>Watch me get engaged on my trip to Boston. Click <a style="text-decoration: underline;" href="https://www.youtube.com/watch?v=Q_QmepSYqng"  target="_blank">here</a> to watch.</p>
-              </div>
-            </div>
-            <div class="personal-card">
-              <div class="personal-card-image"> <img src="../_assets/images/disney.png"></div>
-              <div class="personal-card-text">
-                <h2>Disney and Universal</h2>
-                <p>Check out my trip to Disney and Harry Potter World. Click <a style="text-decoration: underline;" href="https://www.youtube.com/watch?v=mnGA00I5H1o"  target="_blank">here</a> to watch.</p></p>
-              </div>
-            </div>
-          </div>
-        </div>
-    </section>
-    <section id="cool-stuff" class="cool-stuff">
-      <h1>Cool Stuff To Check Out</h1>
-      <p>Here are some cool articles and tools that I have found to be helpful and I think they could be good for you as well.</p>
-      <div class="cool-stuff-inner container">
-      <div class="cool-stuff-card">
-        <div class="cool-stuff-image"> <img  src="../_assets/images/pineapple.png"> </div>
-            <div class="cool-stuff-text"> <a style="text-decoration: underline;" href="https://kentcdodds.com/blog/write-tests" target="_blank"> 
-              <p>Write tests. Not too many. Mostly integration.</p>
-              </a> </div>
-        </div>
-        <div class="cool-stuff-card">
-          <div class="cool-stuff-image"> <img  src="../_assets/images/odin.png"> </div>
-          <div class="cool-stuff-text">  <a style="text-decoration: underline;" href="https://www.theodinproject.com/about" target="_blank"> 
-            <p>The Odin Project</p>
-            </a> </div>
-        </div>
-        <div class="cool-stuff-card">
-          <div class="cool-stuff-image"> <img src="../_assets/images/cypress.png"> </div>
-          <div class="cool-stuff-text">  <a style="text-decoration: underline;" href="https://www.cypress.io/" target="_blank"> 
-            <p>JavaScript End to End Tesing Tool.</p>
-            </a> </div>
-        </div>
-      </div>
-  </section>
-  </main>
-  <footer class="footer">
-    <div class="container">
-      <p>Thanks for visiting!</p>
-    </div>
-  </footer>  
-</body>
-</html>
+<main style="scroll-behavior: smooth">{{ content }}</main>
