added 2 more Mds

--- a/_includes/my-work.html
+++ b/_includes/my-work.html
@@ -7,7 +7,7 @@
           <div class="dev-card-image"> <img src="/assets/images/mia-card-2.png"></div>
           <div class="dev-card-text">
             <h2>Made In America</h2>
-            <p>An initiative to help promote more American made goods. Click <a style="text-decoration: underline;" href="mia.html" target="_blank"> 
+            <p>An initiative to help promote more American made goods. Click <a style="text-decoration: underline;" href="/pages/mia.html" target="_blank"> 
               here </a>to read more.</p>
           </div>
         </div>
@@ -15,7 +15,7 @@
           <div class="dev-card-image"> <img src="/assets/images/vote-card.png"></div>
           <div class="dev-card-text">
             <h2>Vote.gov</h2>
-            <p>Your one stop shop for election information. Click <a style="text-decoration: underline;" href="vote.html" target="_blank"> 
+            <p>Your one stop shop for election information. Click <a style="text-decoration: underline;" href="/pages/vote.html" target="_blank"> 
               here </a>to read more.</p>
           </div>
         </div>
