--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,16 +1,18 @@
-<!-- ---
-layout: base
----
-
-<div id="main-content" class="usa-layout-docs usa-section padding-top-4">
-  <div class="grid-container">
-    <div class="grid-row grid-gap">
-      <main
-        class="usa-layout-docs__main desktop:grid-col-12 usa-prose"
-        data-test="fa-list"
-      >
-        {{ content }}
-      </main>
+<html>
+  {% include meta.html %}
+<body style="background: #ebebeb;">
+  <header class="page-heder">
+    <div class="page-hero">
+      <!-- make this a fluid with the image needed  -->
+      <img class="mia-hero-pic" src="images/mia.png">
     </div>
-  </div>
-</div> -->
+  </header>
+  <main>
+    <section class="mia" style="padding-bottom: 40px">
+      <div class="page-content container">
+        {{ content }}
+      </div>
+    </section>
+  </main>
+</body>
+</html>
