--- a/assets/sass/components/_pages.scss
+++ b/assets/sass/components/_pages.scss
@@ -1,9 +1,9 @@
-.mia-hero{
+.page-hero{
  margin:auto;
  max-width: 1100px;
 }
 
-.mia-hero-pic{
+.page-hero-pic{
   background-position: top;
   min-height: 178px;
   width: 100%;
@@ -17,7 +17,7 @@
     }
 }
 
-.mia-content{
+.page-content{
   max-width: 1100px;
   padding-left: 30px;
   padding-right: 30px;
@@ -51,7 +51,7 @@ margin-right: auto;
 max-width: 75ch;
 }
 
-.mia-ul{
+.page-ul{
   font-family: sans-serif;
   font-size: 18px;
   line-height: 1.75;
