--- a/_includes/my-work.html
+++ b/_includes/my-work.html
@@ -7,7 +7,7 @@
           <div class="dev-card-image"> <img src="/assets/images/mia-card-2.png"></div>
           <div class="dev-card-text">
             <h2>Made In America</h2>
-            <p>An initiative to help promote more American made goods. Click <a style="text-decoration: underline;" href="/pages/mia.html" target="_blank"> 
+            <p>An initiative to help promote more American made goods. Click <a style="text-decoration: underline;" href="/pages/mia.html" > 
               here </a>to read more.</p>
           </div>
         </div>
@@ -15,7 +15,7 @@
           <div class="dev-card-image"> <img src="/assets/images/vote-card.png"></div>
           <div class="dev-card-text">
             <h2>Vote.gov</h2>
-            <p>Your one stop shop for election information. Click <a style="text-decoration: underline;" href="/pages/vote.html" target="_blank"> 
+            <p>Your one stop shop for election information. Click <a style="text-decoration: underline;" href="/pages/vote.html" > 
               here </a>to read more.</p>
           </div>
         </div>
@@ -23,7 +23,7 @@
           <div class="dev-card-image"> <img src="/assets/images/ys park.jpeg"></div>
           <div class="dev-card-text">
             <h2>National Parks</h2>
-            <p>My first landing page. Click <a style="text-decoration: underline;" href="natpark.html" target="_blank"> 
+            <p>My first landing page. Click <a style="text-decoration: underline;" href="/pages/natpark.html" > 
               here </a>to read more.</p>
           </div>
         </div>
@@ -31,7 +31,7 @@
           <div class="dev-card-image"> <img src="/assets/images/coffee.png"></div>
           <div class="dev-card-text">
             <h2>Aiken Coffeehouse and Lounge</h2>
-            <p>My brain child and dream business. Click <a style="text-decoration: underline;" href="aiken.html" target="_blank"> 
+            <p>My brain child and dream business. Click <a style="text-decoration: underline;" href="/pages/aiken.html" > 
               here </a>to read more.</p>
           </div>
         </div>
