made hamburger more simple

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -7,7 +7,7 @@
   href="https://fonts.google.com/specimen/Electrolize?category=Serif,Sans+Serif,Display,Monospace"
   rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="/assets/js/script.js"></script>
+  <script src="/assets/js/hamburger-menu.js"></script>
 
   <style>
     a {
