--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,7 +7,7 @@
         <a href="https://github.com/clmedders" target="_blank"> <img class="navbar-logo-item" src="/assets/images/cat-2.png"></a>
       </li>
     </ul>
-  <div id="hamburger-menu" class="fa fa-bars hamburger-menu">Menu</div> 
+  <div id="hamburger-menu" class="fa fa-bars hamburger-menu" data-test="hamburger-menu">Menu</div> 
   <div id="site-menu" class="navbar-menu">
         <div class="navbar-list">
           <ul>
