--- a/assets/output-css/style.css
+++ b/assets/output-css/style.css
@@ -174,8 +174,8 @@ header, footer, div, section {
       padding-left: 0px; } }
   @media (min-width: 1100px) {
     .hero-pic {
-      margin-left: 100px;
-      width: 500px; } }
+      width: 500px;
+      margin-left: 150px; } }
   .hero-pic img {
     border-radius: 50%;
     display: block;
@@ -191,7 +191,6 @@ header, footer, div, section {
     @media (min-width: 1100px) {
       .hero-pic img {
         height: 500px;
-        margin-left: 100px;
         width: 500px; } }
 
 .hero-button {
@@ -396,51 +395,6 @@ header, footer, div, section {
 .cool-stuff-card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); }
 
-.mia-hero {
-  margin: auto;
-  max-width: 1100px; }
-
-.mia-hero-pic {
-  background-position: top;
-  min-height: 178px;
-  width: 100%; }
-  @media screen and (min-width: 480px) {
-    .mia-hero-pic {
-      min-height: 250px; } }
-  @media screen and (min-width: 768px) {
-    .mia-hero-pic {
-      min-height: 450px; } }
-
-.mia-content {
-  max-width: 1100px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-top: 40px;
-  text-align: center;
-  width: 100%; }
-  @media (min-width: 680px) {
-    .mia-content {
-      text-align: left; } }
-  .mia-content h1 {
-    font-family: Electrolize;
-    font-size: 28px;
-    text-align: center; }
-  .mia-content p {
-    font-family: sans-serif;
-    font-size: 18px; }
-
-.p-tag {
-  line-height: 1.75;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 75ch; }
-
-.mia-ul {
-  font-family: sans-serif;
-  font-size: 18px;
-  line-height: 1.75;
-  text-align: center; }
-
 .footer {
   background-color: #663399; }
   .footer p {
@@ -575,6 +529,51 @@ header, footer, div, section {
   max-width: 75ch; }
 
 .aiken-ul {
+  font-family: sans-serif;
+  font-size: 18px;
+  line-height: 1.75;
+  text-align: center; }
+
+.page-hero {
+  margin: auto;
+  max-width: 1100px; }
+
+.page-hero-pic {
+  background-position: top;
+  min-height: 178px;
+  width: 100%; }
+  @media screen and (min-width: 480px) {
+    .page-hero-pic {
+      min-height: 250px; } }
+  @media screen and (min-width: 768px) {
+    .page-hero-pic {
+      min-height: 450px; } }
+
+.page-content {
+  max-width: 1100px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 40px;
+  text-align: center;
+  width: 100%; }
+  @media (min-width: 680px) {
+    .page-content {
+      text-align: left; } }
+  .page-content h1 {
+    font-family: Electrolize;
+    font-size: 28px;
+    text-align: center; }
+  .page-content p {
+    font-family: sans-serif;
+    font-size: 18px; }
+
+.p-tag {
+  line-height: 1.75;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 75ch; }
+
+.page-ul {
   font-family: sans-serif;
   font-size: 18px;
   line-height: 1.75;
