--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -6,7 +6,7 @@
 @import "components/who-i-am";
 @import "components/my-work";
 @import "components/cool-stuff";
-@import "components/mia";
+// @import "components/mia";
 @import "components/footer";
 @import "components/vote";
 @import "components/odin";
