--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,7 +13,7 @@
           <ul>
             <li class="navbar-item"><a href="#who-i-am" target="_top">Who I Am</a></li>
             <li class="navbar-item"><a href="#my-work" target="_top">My Work</a></li>
-            <li class="navbar-item"><a href="#cool-stuff" target="_top">Some Cool Stuff</a></li>
+            <li class="navbar-item"><a href="../pages/jsPlayGround.html" target="_top">JS Playground</a></li>
         </ul>
         </div>
         </div>
