--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
   <div class="container">
-    <p>Thanks for visiting!</p>
+    <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"  target="_blank">Never Give Up</a></p>
   </div>
 </footer> 
