--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,8 +11,8 @@
   <div id="site-menu" class="navbar-menu">
         <div class="navbar-list">
           <ul>
-            <li class="navbar-item"><a href="#who-i-am" target="_top">Who I Am</a></li>
-            <li class="navbar-item"><a href="#my-work" target="_top">My Work</a></li>
+            <li class="navbar-item"><a href="../pages/blog.html" target="_top">Blogs</a></li>
+            <li class="navbar-item"><a href="../pages/spotify.html" target="_top">Spotify</a></li>
             <li class="navbar-item"><a href="../pages/jsPlayGround.html" target="_top">JS Playground</a></li>
         </ul>
         </div>
