--- a/_includes/who-i-am.html
+++ b/_includes/who-i-am.html
@@ -8,6 +8,9 @@
       <br>
       <br>
       However, I am much more than that... I am also a son, brother, friend, husband, and a dad. Born and raised in Aiken, SC I met the love of my life in college and have grown an awesome life. We have one child and with all the craziness that will bring, I really can't imagine it being any other way. I am so grateful that you are here and hope that when you leave you to have a better idea of who I am, what I can do, and maybe have a desire to connect.  
+      <br>
+      <br>
+      Please feel free to click around and see projects I have worked on both personally and professionally. I hope that after seeing this you will have a better understanding of who I and how I work!
     </p>
   </div>
 </section>
