--- a/assets/sass/components/_who-i-am.scss
+++ b/assets/sass/components/_who-i-am.scss
@@ -4,8 +4,7 @@
 
 .who-i-am-content{
   max-width: 1100px;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding: 30px;
   text-align: center;
   width: 100%;
 
