--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,7 @@
     <section class="mia" style="padding-bottom: 40px">
       <div class="page-content container">
         {{ content }}
+        <p><a href="../index.html">Home Page</a></p>
       </div>
     </section>
   </main>
