--- a/_includes/page-navbar.html
+++ b/_includes/page-navbar.html
@@ -1,7 +1,7 @@
 <nav>
   <div class="navbar">
     <div class="navbar-content container">
-  <ul class="navbar-logo">
+  <!-- <ul class="navbar-logo">
     <li> <a href="https://www.linkedin.com/in/christian-medders-6a00b7a5/"  target="_blank"> <img class="navbar-logo-item" src="/assets/images/linkedin.png"></a></li>
     <li>
       <a href="https://github.com/clmedders" target="_blank"> <img class="navbar-logo-item" src="/assets/images/cat-2.png"></a>
@@ -14,7 +14,7 @@
           <li class="navbar-item"><a href="../index.html" target="_top">Take Me Back</a></li>
       </ul>
       </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </nav>
