--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,12 +11,16 @@
   <div id="site-menu" class="navbar-menu">
         <div class="navbar-list">
           <ul>
-            <li class="navbar-item"><a href="../blog-posts.html" target="_top">Blogs</a></li>
-            <li class="navbar-item"><a href="../pages/spotify.html" target="_top">Spotify</a></li>
-            <li class="navbar-item"><a href="../pages/jsPlayGround.html" target="_top">JS Playground</a></li>
+          {% for page in site.pages %}
+          {% if page.navbar %}
+            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+          {% endif %}
+        {% endfor %} 
         </ul>
         </div>
         </div>
       </div>
     </div>
   </nav>
+
+  
