--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,13 +1,12 @@
 <html>
   {% include meta.html %}
 <body style="background: #ebebeb;">
-  {% include page-navbar.html %} 
+  {% include navbar.html %} 
 
   <main>
     <section class="mia" style="padding-bottom: 40px">
       <div class="page-content container">
         {{ content }}
-        <p><a href="../index.html">Home Page</a></p>
       </div>
     </section>
   </main>
