--- a/assets/output-css/style.css
+++ b/assets/output-css/style.css
@@ -381,11 +381,10 @@ header, footer, div, section {
   background-color: white;
   border-radius: 10px;
   margin: 1em;
-  padding: 10px;
+  padding: 20px;
   text-align: center;
   transition: 0.5s;
-  max-width: 250px;
-  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .personal-card-text h2 {
@@ -732,6 +731,11 @@ header, footer, div, section {
   font-size: 18px;
   line-height: 1.75;
   text-align: center;
+}
+
+.blog-card {
+  display: flex;
+  padding: 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
