--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,7 +1,7 @@
 <html>
   {% include meta.html %}
 <body style="background: #ebebeb;">
-  {% include page-navbar.html %} 
+  {% include navbar.html %} 
 
   <main>
     <section class="mia" style="padding-bottom: 40px">
@@ -14,3 +14,5 @@
     footer.html %}
 </body>
 </html>
+
+ 
