--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -2,7 +2,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/assets/output-css/style.css">
+  <link rel="stylesheet" href="../assets/output-css/style.css">
   <link
   href="https://fonts.google.com/specimen/Electrolize?category=Serif,Sans+Serif,Display,Monospace"
   rel="stylesheet"/>
