--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -6,7 +6,7 @@
         <button class="hero-button"><a href="mailto:cmedd92@gmail.com">Let's Connect</a></button>
     </div>
     <div class="hero-pic">
-      <img  src="/assets/images/me.jpg">
+      <img  src="../assets/images/me.jpg">
     </div>
       </div>
 </section>
