--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -34,7 +34,6 @@ import { SITE_TITLE } from '../consts';
 	}
 	nav a {
 		padding: 1em 0.5em;
-		/* color: var(--black); */
 		color: white;
 		border-bottom: 4px solid transparent;
 		text-decoration: none;
@@ -43,4 +42,11 @@ import { SITE_TITLE } from '../consts';
 		text-decoration: none;
 		border-bottom-color: white;
 	}
+
+	@media (max-width: 720px) {
+		nav a {
+			font-size: 14px;
+
+	}
+			}
 </style>
