--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,6 +21,8 @@ const today = new Date();
     background: linear-gradient(100.6deg, purple 23.13%, rgb(86, 38, 86) 82.12%);
 		color: rgb(var(--gray));
 		text-align: center;
+		position: fixed;
+		width: 100%;
 	}
 	.social-links {
 		display: flex;
@@ -33,6 +35,6 @@ const today = new Date();
 		color: white
 	}
 	.social-links a:hover {
-		color: rgb(var(--gray-dark));
+		color: lightskyblue
 	}
 </style>
