--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,34 +3,19 @@ import HeaderLink from './HeaderLink.astro';
 import { SITE_TITLE } from '../consts';
 ---
 
-<header>
-	<nav>
-		<h2><a href="/">{SITE_TITLE}</a></h2>
+<header class=" bg-blue-950 m-0 px-20">
+	<nav class=" flex items-center justify-between ">
+		<h2 class=" m-0 text-lg "><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
 			<HeaderLink href="/">Home</HeaderLink>
 			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
+			<!-- <HeaderLink href="/about">About</HeaderLink> -->
 	</nav>
 </header>
 <style>
-	header {
-		margin: 0;
-		padding: 0 1em;
-    background: linear-gradient(100.6deg, purple 23.13%, rgb(86, 38, 86) 82.12%);
-	}
-	h2 {
-		margin: 0;
-		font-size: 1em;
-	}
-
 	h2 a,
 	h2 a.active {
 		text-decoration: none;
-	}
-	nav {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
 	}
 	nav a {
 		padding: 1em 0.5em;
