--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -59,7 +59,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				<div class="hero-image">
 					{heroImage && <img width={1020} height={510} src={heroImage} alt="" />}
 				</div>
-				<div class="prose">
+				<div class="prose place-content-center" >
 					<div class="title">
 						<div class="date">
 							<FormattedDate date={pubDate} />
@@ -78,6 +78,6 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				</div>
 			</article>
 		</main>
-		<Footer />
+		<!-- <Footer /> -->
 	</body>
 </html>
