--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -16,7 +16,7 @@ const posts = (await getCollection('blog')).sort(
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 		<style>
-			main {
+			/* main {
 				width: 960px;
 			}
 			ul {
@@ -79,19 +79,19 @@ const posts = (await getCollection('blog')).sort(
 				ul li:first-child .title {
 					font-size: 1.563em;
 				}
-			}
+			} */
 		</style>
 	</head>
 	<body>
 		<Header />
-		<main>
+		<main class=" w-960 ">
 			<section>
-				<ul>
+				<ul class=" flex flex-wrap ">
 					{
 						posts.map((post) => (
 							<li>
 								<a href={`/blog/${post.slug}/`}>
-									<img width={720} height={360} src={post.data.heroImage} alt="" />
+									<img src={post.data.heroImage} alt="" />
 									<h4 class="title">{post.data.title}</h4>
 									<p class="date">
 										<FormattedDate date={post.data.pubDate} />
@@ -103,7 +103,6 @@ const posts = (await getCollection('blog')).sort(
 				</ul>
 			</section>
 		</main>
-		<Footer />
+		<!-- <Footer /> -->
 	</body>
 </html>
-
