--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+// import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
 
@@ -14,17 +14,30 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<Header title={SITE_TITLE} />
 		<main>
 			<h1>Hello, There!</h1>
-			<p>
+			<>
 				Welcome to my site, I hope that you came here excited and ready to go! The purpose of this mix of content, styles and scripting is to give you a chance to learn more about me and see what work I might have done or even currently working on. There will be a mix of blogs, maybe some YouTube videos and a few brain dumps that might not make any sense. However if you would be so kind as to check what you think is intresting I would be very happy.
-				<br>
-				<br>
-				With that being said please feel free to click around and see projects I have worked on both personally and professionally.
-				<br>
 				<br>		
 				<br>
+				My name is Christian Medders a dedicated and passionate human working within the web development world with a goal of creating efficient, well-structured, software solutions. With a strong passion for always learning I am working to hone my craft and staying up-to-date with the latest technologies and trends in the field.
+				<br>		
 				<br>
+				I specialize in E2E Testing, Frontend along with DevOps and have experience working on a wide range of projects. My expereince includes:
+				<br>		
+				<br>		
+					<p>
+					- Frontend Development(Javascript, CSS, HTML)
+					<br>
+					- Agile methodologies (Scrum, Kanban)
+					<br>
+					- Test-driven development (TDD)
+					<br>
+					- Continuous integration and deployment (CI/CD)
+					<br>
+					- Version control (Git)
+					</p>
+					With that being said please feel free to click around and see projects I have worked on both personally and professionally. Also reach out if you wish to discuss potential project opportunities or simply want to chat about the latest developments in the tech world!</p>
 			</p>
 		</main>
-		<Footer />
+		<!-- <Footer /> -->
 	</body>
 </html>
