--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ import { SITE_TITLE } from '../consts';
 		<div class="internal-links">
 			<HeaderLink href="/">Home</HeaderLink>
 			<HeaderLink href="/blog">Blog</HeaderLink>
-			<!-- <HeaderLink href="/about">About</HeaderLink> -->
+			<HeaderLink href="/javascript">Javascript</HeaderLink>
 	</nav>
 </header>
 <style>
