added img to quote generator

--- a/src/pages/officequotes.astro
+++ b/src/pages/officequotes.astro
@@ -19,6 +19,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
     <!-- <div class=" border m-auto"> -->
       <button id="quote-btn" class=" bg-blue-950 text-white p-2 w-auto rounded-lg m-auto">Quote Me...</button>
       <h5 id="character" class=" m-auto"></h5>
+			<img id="pic" src=""/>
       <p id="quote-box" class=" m-auto text-center"></p>
     </div>
 		</main>
