update styles and other things

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -13,7 +13,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 <html lang="en">
 	<head>
 		<BaseHead title={title} description={description} />
-		<style>
+		<!-- <style>
 			main {
 				width: calc(100% - 2em);
 				max-width: 100%;
@@ -49,7 +49,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 			.last-updated-on {
 				font-style: italic;
 			}
-		</style>
+		</style> -->
 	</head>
 
 	<body>
@@ -59,8 +59,8 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				<div class="hero-image">
 					{heroImage && <img width={1020} height={510} src={heroImage} alt="" />}
 				</div>
-				<div class="prose place-content-center" >
-					<div class="title">
+				<div class="text-left" >
+					<div class=" text-center text-xs sm:text-xl">
 						<div class="date">
 							<FormattedDate date={pubDate} />
 							{
