--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,6 +36,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 					- Version control (Git)
 					</p>
 					With that being said please feel free to click around and see projects I have worked on both personally and professionally. Also reach out if you wish to discuss potential project opportunities or simply want to chat about the latest developments in the tech world!</p>
+					<br>
+					<br>
+					<a href="mailto:cmedd92@gmail.com">Click here to email me</a>
 			</p>
 		</main>
 		<!-- <Footer /> -->
