--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,8 @@ import HeaderLink from './HeaderLink.astro';
 import { SITE_TITLE } from '../consts';
 ---
 
-<header class=" bg-blue-950 m-0 px-20">
+<header class= " bg-blue-950 m-0 px-1 sm:px-20">
+<!-- <header class=" bg-blue-950 flex flex-col "> -->
 	<nav class=" flex items-center justify-between ">
 		<h2 class=" m-0 text-lg "><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
