added 8ball page

--- a/src/pages/javascript.astro
+++ b/src/pages/javascript.astro
@@ -14,7 +14,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<Header title={SITE_TITLE} />
 		<main>
 		<h1>Javascript Sandbox</h1>
-    <a href="/officequotes">Office Quotes</a>
+		<ul>
+			<li><a href="/officequotes">Office Quotes</a></li>
+			<li><a href="/8ball">Magic 8 Ball</a></li>
+		</ul>
 		</main>
 	</body>
 </html>
