--- a/src/pages/officequotes.astro
+++ b/src/pages/officequotes.astro
@@ -13,8 +13,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
-		<h1>Office Quotes</h1>
-    <p>For a litle pick me up during the long work day!</p>
+		<h1 class=" text-center">Office Quotes</h1>
+    <p class=" text-center">For a litle pick me up during the long work day!</p>
     <div class=" flex flex-col justify-center space-y-4">
     <!-- <div class=" border m-auto"> -->
       <button id="quote-btn" class=" bg-blue-950 text-white p-2 w-auto rounded-lg m-auto">Quote Me...</button>
@@ -23,6 +23,6 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
       <p id="quote-box" class=" m-auto text-center"></p>
     </div>
 		</main>
-    <script src="../scripts/script.js"></script>
+    <script src="../scripts/office.js"></script>
 	</body>
 </html>
