removed rando letter

--- a/src/pages/8ball.astro
+++ b/src/pages/8ball.astro
@@ -26,6 +26,6 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
         </div>
     </div>
 		</main>
-    <script src="src/scripts/8ball.js"c></script>
+    <script src="src/scripts/8ball.js"></script>
 	</body>
 </html>
