update to genie page

--- a/src/pages/javascript.astro
+++ b/src/pages/javascript.astro
@@ -16,7 +16,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<h1>Javascript Sandbox</h1>
 		<ul>
 			<li><a href="/officequotes">Office Quotes</a></li>
-			<li><a href="/8ball">Magic 8 Ball</a></li>
+			<li><a href="/genie">Online Genie</a></li>
 		</ul>
 		</main>
 	</body>
