--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -15,6 +15,8 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 <html lang="en">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+<link rel="icon" type="image/svg+xml" href="Smile face icon.svg" />
+
 		<!-- <style>
 			main {
 				width: calc(100% - 2em);
