--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -15,6 +15,8 @@ const posts = (await getCollection('blog')).sort(
 <html lang="en">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+<link rel="icon" type="image/svg+xml" href="Smile face icon.svg" />
+
 		<style>
 			/* main {
 				width: 960px;
